upd: the hero section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,5 @@
-/* src/app/globals.css */
+@import '@/styles/theme.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  background-color: #000; /* Default black background */
-  color: #fff;
-}
